@@ -1060,6 +1060,8 @@ likewise, now we have seen that simple 2-dimensional filters can devour
 a small number of dips.
 
 \subsection{Why 2-D PEFs have white output} \sx{whiteness proof}\sx{PEF 2-D white output}
+\inputdir{whitepruf}
+
 A well-known property  (see {\em FGDP} or {\em PVI\,) }
 of a 1-D PEF is its energy clusters immediately after the
 impulse at zero delay time.
@@ -1218,6 +1220,7 @@ m &=&  d \ \ast \ {\rm PEF}
 
 
 \subsection{Examples of modeling and deconvolving with a 2-D PEF }
+\inputdir{morgan}
 
 Here,
 we examine elementary signal-processing applications of 2-D PEFs
